feat adjust apt for jdk 8,11,17